# tests_for_java

./: .dvcignore  .gitignore  jvd_classification.dvc  jvd_patched.dvc  owasp.dvc  pyproject.toml  test_ds_VJD.csv.dvc  test_ds_owasp.csv.dvc  train_ds_VJD.csv.dvc  train_ds_owasp.csv.dvc
.dvc/: config
