[tool.poetry]
name = "ml-data-pipeline"
version = "0.1.0"
description = "Machine learning data pipeline with DVC"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = {extras = ["all"], version = "^3.45.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"